# leds_cancer_backend

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  create_admin.py  pyproject.toml
leds_cancer_backend/: manage.py
leds_cancer_backend/authentication/: __init__.py  admin.py  apps.py  models.py  repositories.py  serializers.py  urls.py  views.py
leds_cancer_backend/exams/: __init__.py  admin.py  apps.py  models.py  repositories.py  serializers.py  tokens.py  urls.py  views.py
leds_cancer_backend/leds_cancer_backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
leds_cancer_backend/patients/: __init__.py  admin.py  apps.py  models.py  repositories.py  serializers.py  urls.py  views.py
