[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leds_cancer_backend"
version = "0.1.0"
description = "Descrição do projeto"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Seu Nome", email = "seu@email.com"}
]
dependencies = [
    "django-cors-headers>=4.9.0",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.15.3",
]

# Ferramentas de qualidade

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", ".mypy_cache", ".tox", "build", "dist"]
known_first_party = ["leds_cancer_backend"]  # ajuste para seu pacote

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
exclude = [
    "^tests/",
    "^setup.py$",
    ".*/migrations/.*",
    "manage.py"
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
bump_message = "chore(release): bump version $current_version → $new_version"
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "flake8-bugbear>=24.12.12",
    "flake8-comprehensions>=3.17.0",
    "flake8-return>=1.2.0",
    "flake8-simplify>=0.30.0",
    "isort>=6.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
]
